# victus16-control-FanSpeed-in-Arch

./: README.md  install.sh
backend/: meson.build
backend/src/: fan.cpp  fan.hpp  fan_profile_config.hpp  main.cpp
frontend/: meson.build
frontend/src/: fan.cpp  fan.hpp  main.cpp  settings.hpp  socket.cpp  socket.hpp
